--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -3,8 +3,10 @@
     text-decoration: none;
     font-weight: 400;
     letter-spacing: 3px;
+    text-align: center;
 }
 
 .link:hover {
     color: rgb(58,58,58);
 }
+
